button alignment fix

--- a/style.css
+++ b/style.css
@@ -22,12 +22,14 @@ body{
   position: absolute;
   width: 100%;
   bottom: 2%;
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: nowrap;
 }
 
 .buttonContainer{
   border: 0px;
   position: relative;
-  float: left;
   width: calc(100% / 5);
   display: flex;
   flex-direction: column;
